[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymercost"
version = "0.1.0"
authors = [{ name = "Chris T. Mackey", email = "your.email@example.com" }]
description = "Python tools for polymer compounding cost and properties estimation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []  # e.g., add "numpy" if needed

[project.urls]
Homepage = "https://github.com/chrisTMackey/polymercost"
Issues = "https://github.com/chrisTMackey/polymercost/issues"