[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymercost"
version = "0.1.1"
authors = [{ name = "Chris T. Mackey", email = "chris.t.mackey@gmail.com" }]
description = "Python tools for polymer compounding cost and properties estimation."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/chrisTMackey/polymercost"
Issues = "https://github.com/chrisTMackey/polymercost/issues"
